# F1FantasyOptimizer

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml  test.yml  test_scraper.yml  tests.yml
f1fantasyoptimizer/: __main__.py  data.py  simulator.py  solver.py
f1fantasyoptimizer/tests/: test_data.py  test_scraper.py  utils.py
f1fantasyoptimizer/ui/: cli.py  gui.py
